Add ProductView & fix cart quantity settings
