# frontend/swagger.json
@@ -100,6 +100,46 @@
         }
       }
     },
+    "/api/Product/GetById/{id}": {
+      "get": {
+        "tags": [
+          "Product"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductDTO"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductDTO"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/ProductCategory/GetAll": {
       "get": {
         "tags": [
@@ -685,6 +725,10 @@
             "type": "number",
             "format": "double"
           },
+          "urlSlug": {
+            "type": "string",
+            "nullable": true
+          },
           "productCategoryId": {
             "type": "integer",
             "format": "int32",
@@ -802,6 +846,10 @@
           "price": {
             "type": "number",
             "format": "double"
+          },
+          "urlSlug": {
+            "type": "string",
+            "nullable": true
           },
           "category": {
             "$ref": "#/components/schemas/ProductCategory"
